--- a/public/index.html
+++ b/public/index.html
@@ -71,7 +71,7 @@
         
         <div class="site-meta">
             <h1 class="site-name"><a href="/">Mirthz</a></h1>
-            <h2 class="site-description">Hi everyone. I'm Mirthz!!!🧑🏼‍💻</h2>
+            <h2 class="site-description">Hi everyone. I'm MirthZ !!! 🧑🏼‍💻</h2>
         </div>
     </header><ol class="menu-social">
             
